--- a/templates/indexShop.html
+++ b/templates/indexShop.html
@@ -38,7 +38,7 @@
 
                 <section class="shop__flex">
                     <div class="left__block">
-                        <h2 class="value__search">Puncture Change</h2>
+                        <h2 class="value__search">Puncture Change name</h2>
                         <h3>$ 69</h3>
                         <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo pariatur animi magni
                             provident
