--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,8 @@
 {% load static %}
 <header class="header" id="header">
     <nav class="nav container">
-        <a href="#" class="nav__logo">eMechanic</a>
+        <a href="#" class="nav__logo"> <img src={% static 'assets/img/logo.jpg' %} alt="" class="nav__img"><span class="titel__eM">eMechanic</span></a>
+       
 
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
@@ -41,7 +42,7 @@
                 </li>
             </ul>
         </div>
-
-        <img src={% static 'assets/img/logo.jpg' %} alt="" class="nav__img">
+        <span class="titel__eM1">eMechanic</span>
+       
     </nav>
 </header>
