--- a/templates/header.html
+++ b/templates/header.html
@@ -8,35 +8,40 @@
             <ul class="nav__list">
                 <li class="nav__item">
                     <a href="/" class="nav__link active-link">
-                        <img class="bx nav__icon" src={% static 'assets/img/home.png' %} alt="">
+                        <!-- <img class="bx nav__icon" src={% static 'assets/img/home.png' %} alt=""> -->
+                        <svg  class="bx nav__icon"  xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24"><path d="M244 852h116V613.5h240V852h116V497L480 320 244 497v355Zm-75 75V459.5L480 226l311 233.667V927H525V688.5h-90V927H169Zm311-341Z"/></svg>
                         <span class="nav__name">Home</span>
                     </a>
                 </li>
 
                 <li class="nav__item">
                     <a href="/service/" class="nav__link">
-                        <img class="bx nav__icon" src={% static 'assets/img/car.png' %} alt="">
+                        <!-- <img class="bx nav__icon" src={% static 'assets/img/car.png' %} alt=""> -->
+                        <svg class="bx nav__icon"  xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24"><path d="M480.118 300Q456 300 439 283.083 422 266.167 422 242q0-20.16 14.017-43.2Q450.033 175.76 480 146q29.967 29.76 43.983 52.8Q538 221.84 538 242q0 24-16.882 41-16.883 17-41 17Zm-196 0Q260 300 243 283.083 226 266.167 226 242q0-20.16 14.017-43.2Q254.033 175.76 284 146q29.967 29.76 43.983 52.8Q342 221.84 342 242q0 24-16.882 41-16.883 17-41 17Zm392 0Q652 300 635 283.083 618 266.167 618 242q0-20.16 14.017-43.2Q646.033 175.76 676 146q29.967 29.76 43.983 52.8Q734 221.84 734 242q0 24-16.882 41-16.883 17-41 17ZM241 927v41q0 15.725-10.925 26.362Q219.15 1005 203 1005h-36q-16.15 0-27.075-10.638Q129 983.725 129 968V654.857L212 420q5.571-16.65 19.964-26.825Q246.357 383 264 383h432q17.643 0 32.036 10.175T748 420l83 234.857V968q0 15.725-10.925 26.362Q809.15 1005 793 1005h-36q-16.15 0-27.075-10.638Q719 983.725 719 968v-41H241Zm-7-347h492l-43-122H277l-43 122Zm-30 75v197-197Zm97.882 156Q326 811 343 794.118q17-16.883 17-41Q360 729 343.118 712q-16.883-17-41-17Q278 695 261 711.882q-17 16.883-17 41Q244 777 260.882 794q16.883 17 41 17Zm356 0Q682 811 699 794.118q17-16.883 17-41Q716 729 699.118 712q-16.883-17-41-17Q634 695 617 711.882q-17 16.883-17 41Q600 777 616.882 794q16.883 17 41 17ZM204 852h552V655H204v197Z"/></svg>
                         <span class="nav__name">Service</span>
                     </a>
                 </li>
 
                 <li class="nav__item">
                     <a href="/shop/" class="nav__link">
-                        <img class="bx nav__icon" src={% static 'assets/img/shop.png' %} alt="">
+                        <!-- <img class="bx nav__icon" src={% static 'assets/img/shop.png' %} alt=""> -->
+                        <svg  class="bx nav__icon" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24"><path d="M284 966q-31.762 0-54.381-22.619Q207 920.763 207 889t22.619-54.381Q252.238 812 284 812q31.763 0 54.381 22.619Q361 857.237 361 889t-22.619 54.381Q315.763 966 284 966Zm391 0q-31.763 0-54.381-22.619Q598 920.763 598 889t22.619-54.381Q643.237 812 675 812t54.381 22.619Q752 857.237 752 889t-22.619 54.381Q706.763 966 675 966ZM248 337l96 200h275l110-200H248Zm-35.877-75H788.5q23 0 34.5 19.839 11.5 19.838.5 40.161l-138 249q-10 19.5-28.25 30.25T618 612H326l-45 82h471v75H284.189q-43.857 0-66.273-37.75Q195.5 693.5 216 656l54-96.781L128.118 259H50v-75h125l37.123 78ZM344 537h275-275Z"/></svg>
                         <span class="nav__name">Shop</span>
                     </a>
                 </li>
 
                 <li class="nav__item">
                     <a href="/about/" class="nav__link">
-                        <img class="bx nav__icon" src={% static 'assets/img/group.png' %} alt="">
+                        <!-- <img class="bx nav__icon" src={% static 'assets/img/group.png' %} alt=""> -->
+                        <svg  class="bx nav__icon" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24"><path d="M54.5 883V777q0-33 16.75-60.25t45.272-41.761Q177.5 645 240 629.75q62.5-15.25 126-15.25t125.75 15.25Q554 645 614.978 674.989 643.5 689.5 660.25 716.75 677 744 677 777v106H54.5Zm701 0V770q0-43.5-24.25-82.25T663 621.5q48.5 6 91.25 19.75t80.25 34.25Q869 694 887.25 718t18.25 52v113h-150ZM366 577q-64 0-109-45t-45-109q0-64 45-109t109-45q64 0 109 45t45 109q0 64-45 109t-109 45Zm382-154.5q0 63.525-45 108.763Q658 576.5 594 576.5q-9.5 0-25.178-2.344T543 569q26.518-30.691 40.759-68.095Q598 463.5 598 422.75t-14.25-78.5Q569.5 306.5 543 276q12.5-4.5 25.5-5.75T594 269q64 0 109 45.091 45 45.09 45 108.409ZM129.5 808H602v-31q0-11.19-5.5-20.345t-15-14.155Q528 716 474.325 702.75 420.651 689.5 366 689.5q-54.819 0-108.66 13.25Q203.5 716 150 742.5q-9.5 5-15 14.155T129.5 777v31Zm236.438-306q32.562 0 55.812-23.188t23.25-55.75q0-32.562-23.188-55.812T366.062 344q-32.562 0-55.812 23.188T287 422.938q0 32.562 23.188 55.812t55.75 23.25ZM366 808Zm0-385Z"/></svg>
                         <span class="nav__name">About Us</span>
                     </a>
                 </li>
 
                 <li class="nav__item">
                     <a href="/contact/" class="nav__link">
-                        <img class="bx nav__icon" src={% static 'assets/img/contact.png' %} alt="">
+                        <!-- <img class="bx nav__icon" src={% static 'assets/img/contact.png' %} alt=""> -->
+                        <svg  class="bx nav__icon" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 96 960 960" width="24"><path d="M790 926q-124.5 0-243.75-56.5T334.5 720.75Q242 628.5 185.5 509.5T129 265.888q0-17.388 11.714-29.138Q152.429 225 170 225h155q14 0 24.25 8.5T362 256l26 136q2 12.5-.75 23.5T376 435l-94.5 96q42 72 104.25 133.75T525 774l95-94q8.5-8.5 20-12.25t24-1.75l135 27q14 3 23 13.5t9 24.5v154q0 17.571-11.714 29.286Q807.571 926 790 926ZM245.5 460l66-66-17.5-94h-88.5q4 40 13.5 80.5t26.5 79.5Zm350 349q38.5 17 79 27t81.5 13v-88l-92-19.5-68.5 67.5Zm-350-349Zm350 349Z"/></svg>
                         <span class="nav__name">Contact</span>
                     </a>
                 </li>
