--- a/templates/indexShop.html
+++ b/templates/indexShop.html
@@ -27,7 +27,7 @@
             <div class="search__bar">
 
                 <input id="myInput" class="search__input" placeholder="Search" type="text" onkeypress="searchBlock()">
-                <img class="search__img" src={% static 'assets/img/revision-regular-24.png' %} onclick="ref()"  alt="">
+                <img class="search__img" src={% static 'assets/img/refresh.svg' %} onclick="ref()"  alt="">
 
 
             </div>
