--- a/templates/indexContact.html
+++ b/templates/indexContact.html
@@ -33,14 +33,15 @@
             <h2 >eMechanic</h2>
     
         </div>
-    
-        <div class="contact__lower">
-         <a href=""></a> <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-facebook-48.png' %} alt=""> facebook</a>
-         <a href=""></a> <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-instagram-48.png' %} alt="">instagram</a>
-         <a href=""></a>  <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-whatsapp-60.png' %} alt="">whats App</a>
-         <a href=""></a><img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-gmail-logo-48.png' %} alt="">Gmail</a>
+        <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
+        <div class="contact__lower" >
+        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-facebook-48.png' %} alt=""> facebook
+        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-instagram-48.png' %} alt="">instagram
+        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-whatsapp-60.png' %} alt="">whats App
+        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-gmail-logo-48.png' %} alt="">Gmail
     
         </div>
+    </a>
 
 
         </section>
