--- a/templates/indexService.html
+++ b/templates/indexService.html
@@ -25,15 +25,15 @@
 
             <div class="service__section">
                 
-                {% for service in services %}
+                {% for data in allData %}
                     
                     
                 <div class="service__block">
-                    <img class="service__img" src="{{service.img}}" alt="">
-                    <h2 class="font_black">{{service.name}}</h2>
-                    <h3 class="font_black">from Rs. {{service.minPrice}} to Rs. {{service.maxPrice}}</h3>
-                    <span>{{service.dis | safe}}</span>
-                    <button type="button" class="button__buy">Whats App</button>
+                    <img class="service__img" src="{{data.service.img}}" alt="">
+                    <h2 class="font_black">{{data.service.name}}</h2>
+                    <h3 class="font_black">from Rs. {{data.service.minPrice}} to Rs. {{data.service.maxPrice}}</h3>
+                    <span>{{data.service.dis | safe}}</span>
+                    <a href="{{data.link}}" target="_blank"> <button type="button" class="button__buy">Whatspp</button></a>
                 </div>
                 {% endfor %}
             </div>
